# maffs

./: CMakeLists.txt
benchmark/: CMakeLists.txt
benchmark/linalg/: CMakeLists.txt  benchmark_vector.cpp
include/: hardware_check.h
include/calculus/: finite_difference.h  numerical_diff.h
include/calculus/autodiff/: autodiff_expression_builder.h  const.h  differentiable_sym_op.h  mul.h  sum.h  var.h
include/linalg/: matrix.h  vector.h
include/linalg/solvers/: gaussian_elimination.h
src/: CMakeLists.txt  main.cpp
src/calculus/: CMakeLists.txt  finite_difference.cpp  numerical_diff.cpp
src/calculus/autodiff/: const.cpp  differentiable_sym_op.cpp  mul.cpp  sum.cpp  var.cpp
src/linalg/: CMakeLists.txt  matrix.cpp  vector.cpp
test/: CMakeLists.txt
test/calc/: test_finite_difference.cpp
test/calculus/: test_numerical_diff.cpp
test/linalg/: CMakeLists.txt  test_matrix.cpp  test_vector.cpp
